<resources>
    <string name="app_name">Vennda</string>

    <!--Textos botones-->
    <string name="btnIngresar">Ingresar</string>
    <string name="btnRegresar">Salir</string>
    <string name="btnAceptar">Aceptar</string>
    <string name="btnAgregar">Agregar</string>

    <!--Textos usuario y contraseña-->
    <string name="usuario">Correo Electronico:</string>
    <string name="contrasena">PIN:</string>
    <string name="numEmpleado">Numero de Empleado:</string>

    <!--Textos pantalla de puntos de venta-->
    <string name="puntoVenta">Punto de venta:</string>
    <string name="msjBienvenida">Bienvenido $0$ que tenga un excelente día.</string>
    <string name="errorPuntoVenta">Es necesario seleccionar un punto de venta.</string>

    <!-- Textos de dialogos-->
    <string name="dialog_si_lbl">Si</string>
    <string name="dialog_no_lbl">No</string>
    <string name="dialog_advertencia">Advertencia</string>

    <!--Textos de peticiones-->
    <string name="error_servidor_lbl">Error al intentar conectarse al servidor. Por favor intente mas tarde¡.</string>
    <string name="error_inicio_sesion_lbl">!El nombre de usuario o la contraseña que introdujo no son validos¡.</string>
    <string name="error_servidor_getApiImg">Error al intentar obtener las imagenes. ¡Por favor intente más tarde!</string>

    <!-- Textos menu lateral-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="menuApertura">Apertura</string>
    <string name="menuClienteNuevo">Cliente Nuevo</string>
    <string name="menuConsultarVentas">Consultar</string>
    <string name="menuDevoluciones">Devoluciones</string>
    <string name="menuCerrarCaja">Cerra Caja</string>
    <string name="menuConfiguracion">Configuración</string>
    <string name="menuCerrarSesion">Cerrar Sesión</string>

    <!--Textos menu principal-->
    <string name="tabVentas">Ventas</string>
    <string name="tabProductos">Productos</string>


    <!--Textos Apertura y cierre de caja-->
    <string name="txtTitulo">$0$ de Caja</string>
    <string name="txtApertura">Apertura</string>
    <string name="txtCierre">Cierre</string>
    <string name="rowDenominacion">Denomicación: </string>
    <string name="rowCantidad">Cantidad: </string>
    <string name="rowImporte">Importe: </string>
    <string name="msjExisteApertura">Ya se registro una apertura de tienda.</string>
    <string name="msjDominacionRequerida">Es necesario seleccionar una denomicación para agregar la cantidad a lista.</string>
    <string name="msjCantidadRequerida">La cantidad tiene que ser mayor a 0.</string>
    <string name="msjListaVacia">Es necesario agregar por lo menos una denominación a la lista.</string>


    <!--Textos generales-->
    <string name="spinnerSeleccionar">Seleccionar...</string>
    <!--Valores default para categoria todos los productos-->
    <string name="valorIdentificardorCategoria">TODO</string>
    <string name="valorNombreCategoria">TODOS LOS PRODUCTOS</string>
    <string name="menuEliminar">Eliminar</string>
    <string name="menuMoficiar">Modificar</string>
    <string name="menuCancelarVenta">Cancelar Venta</string>
    <string name="menuImprimirTicket">Imprimir Ticket</string>
    <string name="menuCobranzaVenta">Cobranza</string>

    <!--Textos Clientes-->
    <string name="rowNombreCliente">Nombre: </string>
    <string name="rowAltaCliente">Origen: </string>
    <string name="btnAgregarCliente">Nuevo Cliente</string>
    <string name="btnModificar">Modificar</string>
    <string name="btnEliminar">Eliminar</string>
    <string name="etClave">Clave</string>
    <string name="etRazonSocial">Razón Social</string>
    <string name="sListaPrecio">Lista de Precio</string>
    <string name="etDiasCredito">Días de Crédito</string>
    <string name="etEmail">Correo electrónico</string>
    <string name="etCelular">Celular</string>
    <string name="etRfc">RFC</string>
    <string name="etDomicilio">Domicilio</string>
    <string name="etColonia">Colonia</string>
    <string name="etCodigoPostal">Código Postal</string>
    <string name="btnGuardarCliente">Guardar</string>
    <string name="listaPrecios">Lista $0$</string>
    <string name="txtBuscarClientes">Buscar clientes </string>

    <!--Textos Categorias -->
    <string name="rowCategoria">Categoria: </string>
    <string name="totalProductosCategoria">$0$ Producto(s)</string>

    <!--Textos Productos -->
    <string name="rowProducto">Producto: </string>
    <string name="txtEmptyProductos">Escoja una categoria con productos. </string>
    <string name="txtBuscarProductos">Buscar productos </string>
    <string name="txtTituloExistencia">Existencia: </string>
    <string name="txtTituloPrecio">Precio: </string>
    <string name="dlgCantidad">Cantidad</string>
    <string name="dlgAplicarDescuento">Porcentaje/Importe</string>
    <string name="dlgDescuento">Porcentaje Importe %</string>
    <string name="dlgDescuentoTotal">Total Importe $</string>
    <string name="dlgExistencia">Existencia: </string>
    <string name="dlgPrecio">Precio: </string>
    <string name="msjCantidadNecesaria">Es necesario que la cantidad sea mayor a 0. </string>
    <string name="msjCantidadEmpty">Es necesario poner un numero en cantidad. </string>
    <string name="msjCantidadInventario">La cantidad sobrepasa al inventario del producto. </string>
    <string name="msjClienteRequeridoListaPrecio">Es necesario seleccionar un cliente para mostrar las listas de precio.</string>
    <string name="msjDescuentoSobrePasado">El descuento sobrepasa al configurado.</string>

    <!--Textos Menu Ventas -->
    <string name="txtVentaPuntoVenta">Punto de Venta:</string>
    <string name="txtVentaFecha">Fecha:</string>
    <string name="txtVentaFolio">Folio:</string>
    <string name="txtVentaCliente">Cliente:</string>
    <string name="txtLimiteCredito">Limite Credito:</string>
    <string name="txtSaldoCredito">Saldo Credito:</string>
    <string name="txtSubtotal">Subtotal:</string>
    <string name="txtDescuento">Descuento:</string>
    <string name="txtImpuesto">Impuesto:</string>
    <string name="txtTotal">Total:</string>
    <string name="btnCambiarCliente">Cambiar Cliente</string>
    <string name="btnPagar">Pagar</string>
    <string name="msjPagarTotal0">El total a pagar es de 0. Por lo menos debe de escoger un producto.</string>

    <!--Textos Lista Ventas -->
    <string name="txtCantidadVenta">Cant:</string>
    <string name="txtPreciosVenta">Precio:</string>
    <string name="txtSubtotalVenta">Sub:</string>
    <string name="txtDescuentoVenta">Desc:</string>
    <string name="txtImpuestoVenta">Impts:</string>
    <string name="txtTotalVenta">Total:</string>

    <!--Textos AlertDialog Cambiar Cliente -->
    <string name="txtCambiarClienteDlg">Cambiar Cliente</string>
    <string name="txtClienteRow">Cliente:</string>
    <string name="msjSeleccionoCliente">Selecciono el cliente $0$</string>
    <string name="msjCambioClienteProductos">Hay productos en la lista, si cambia el cliente se borraran los productos, ¿Esta de acuerdo?</string>

    <!--Textos AlertDialog pagar -->
    <string name="txtTotalPagar">Total a pagar</string>
    <string name="txtRecibi">Recibi:</string>
    <string name="txtFormaPago">Forma de pago:</string>
    <string name="txtCambio">Cambio:</string>
    <string name="txtCredito">Credito</string>
    <string name="txtContado">Contado</string>
    <string name="txtDevoluciones">Devoluciones</string>
    <string name="txtAmbos">Todas las ventas</string>
    <string name="msjRecibidoMenor">El monto recibido es menor al total a pagar. Por favor verifique sus datos.</string>
    <string name="msjClienteRequerido">Es necesario seleccionar un cliente.</string>
    <string name="msjClienteCredito">El credito esta al tope, no es posible realizar la compra.</string>
    <string name="msjImprimirTicket">¿Deseas Imprimir el ticket?</string>
    <string name="msjNecesarioFormaPago">Es necesario seleccionar una forma de pago</string>
    <string name="msjRecibi">Es necesario agregar el dinero recibido.</string>

    <!--Textos Lista Consulta Ventas -->
    <string name="txtFechaVenta">Fecha:</string>
    <string name="txtClienteVenta">Cliente:</string>
    <string name="txtTipoVenta">Tipo:</string>
    <string name="txtTotalConsultaVenta">Total:</string>
    <string name="txtSaldoVenta">Saldo:</string>

    <!--Textos AlertDialog cancelar Ventas -->
    <string name="txtTituloCancelarVenta">Cancelar Venta</string>
    <string name="txtMotivoCancelar">Motivo:</string>
    <string name="msjAutorizacionInvalida">El usuario $0$ no tiene autorización para cancelar una venta.</string>
    <string name="msjAutorizacionInvalidaDevolucin">El usuario $0$ no tiene autorización para devolver producto.</string>
    <string name="msjUsuarioIncorrecto">No existe el usuario o los datos son incorrectos.</string>
    <string name="msjVentaConAbonos">Esta venta tiene abonos, por lo tanto no se puede eliminar.</string>


    <!--Textos AlertDialog Abonar -->
    <string name="txtSaldoAbono">Saldo</string>
    <string name="txtReferenciaAbono">Referencia:</string>
    <string name="txtMontoAbono">Monto Abono:</string>
    <string name="msjMontoMayorSaldo">El Monto es mayor al Saldo</string>
    <string name="msjErrorMonto">Es necesario seleccionar un monto.</string>
    <string name="txtEfectivo">Efectivo</string>
    <string name="txtTarjeta">Tarjeta</string>


    <!--Textos Configuraciones-->
    <string name="txtImpresora">Dispositivos Bluetooth:</string>
    <string name="imprimir_bluetooth_activar">Bluetooth desactivado</string>
    <string name="imprimir_bluetooth_no_disp">No se encontaron dispositivos vinculados</string>
    <string name="imprimir_no_configurado">No tiene impresora configuradas. Por favor comuniquese con el administrador.</string>

    <!-- Textos dialogo buscar ticket BT = buscar ticket-->
    <string name="txtTituloBT">Buscar venta</string>
    <string name="txtTicketBT">Folio:</string>
    <string name="title_activity_devolucion">DevolucionActivity</string>

    <!-- Textos actividad devolucion-->
    <string name="txtTituloDevolucion">Devolucion</string>
    <string name="txtClienteDevolucion">Cliente:</string>
    <string name="txtFolioDevolucion">Folio:</string>
    <string name="txtFechaDevolucion">Fecha:</string>
    <string name="txtTotalDevolucion">Total:</string>
    <string name="txtTotalCantidadDevolucion">Total cantidad:</string>
    <string name="btnAceptarDevolucion">Aceptar</string>
    <string name="rowVentaDevolucion">Venta:</string>
    <string name="rowDevueltosDevolucion">Devueltos:</string>
    <string name="rowCantidadDevolver">Cantidad a devolver</string>




</resources>
