<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/candado_abierto"
            android:title="@string/menuApertura" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/cliente"
            android:title="@string/menuClienteNuevo" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/buscar"
            android:title="@string/menuConsultarVentas" />
        <item
            android:id="@+id/nav_devolucion"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menuDevoluciones" />
    </group>

    <!--<item android:title="Communicate">-->
    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/candado_cerrado"
                android:title="@string/menuCerrarCaja" />
            <item
                android:id="@+id/nav_configuration"
                android:icon="@drawable/candado_cerrado"
                android:title="@string/menuConfiguracion" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/salir"
                android:title="@string/menuCerrarSesion" />
        </menu>
    </item>

</menu>
