<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight=".9"
        android:orientation="vertical">

        <SearchView
            android:id="@+id/busquedaVentas"
            android:color="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/rbAmbos"
            android:gravity="center"
            android:padding="10dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbContado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtContado"
                android:textSize="@dimen/textos"
                android:paddingRight="50dp"/>

            <RadioButton
                android:id="@+id/rbCredito"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtCredito"
                android:textSize="@dimen/textos"
                android:paddingRight="50dp"/>

            <RadioButton
                android:id="@+id/rbDevoluciones"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtDevoluciones"
                android:textSize="@dimen/textos"
                android:paddingRight="50dp"/>

            <RadioButton
                android:id="@+id/rbAmbos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtAmbos"
                android:textSize="@dimen/textos"/>
        </RadioGroup>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lvConsultarVentas" />

    </LinearLayout>


<!--
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight=".1"
        android:gravity="center|bottom"
        android:background="@color/colorPrimary"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btnAgregarCliente"
            android:text="@string/btnAgregarCliente"
            android:layout_width="match_parent"
            android:layout_height="@dimen/boton"
            android:textSize="@dimen/textos"
            android:textAllCaps="false"
            style="@style/Widget.AppCompat.Button.Colored"/>
    </LinearLayout>
-->

</LinearLayout>

