<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.elephantworks.movilvennda.Vistas.ClienteActivity">



    <LinearLayout
        android:id="@+id/linearLayoutLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:foregroundGravity="center">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

    <LinearLayout
        android:layout_width="600dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/etClave"
            android:textSize="@dimen/textos"
            android:textColor="@color/colorVennda"
            android:textStyle="bold"/>

            <EditText
                android:id="@+id/etClave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="600dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/etRazonSocial"
            android:textSize="@dimen/textos"
            android:textColor="@color/colorVennda"
            android:textStyle="bold"/>

            <EditText
                android:id="@+id/etRazonSocial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="600dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sListaPrecio"
            android:textSize="@dimen/textos"
            android:textColor="@color/colorVennda"
            android:textStyle="bold"/>

            <Spinner
                android:id="@+id/sListaPrecio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"
                android:background="@drawable/drawable_spinner"
                android:drawSelectorOnTop="true"
                android:inputType="number"/>
    </LinearLayout>

    <!--<EditText
        android:id="@+id/etLimiteCredito"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Limite de Crédito"
        android:layout_marginBottom="2dp"/>-->

    <LinearLayout
        android:layout_width="600dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/etDiasCredito"
            android:textSize="@dimen/textos"
            android:textColor="@color/colorVennda"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/etDiasCredito"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="600dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/etEmail"
            android:textSize="@dimen/textos"
            android:textColor="@color/colorVennda"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="600dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/etCelular"
            android:textSize="@dimen/textos"
            android:textColor="@color/colorVennda"
            android:textStyle="bold"/>


            <EditText
                android:id="@+id/etCelular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="600dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/etRfc"
            android:textSize="@dimen/textos"
            android:textColor="@color/colorVennda"
            android:textStyle="bold"/>

            <EditText
                android:id="@+id/etRFC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="600dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/etDomicilio"
            android:textSize="@dimen/textos"
            android:textColor="@color/colorVennda"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/etDomicilio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="600dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/etColonia"
            android:textSize="@dimen/textos"
            android:textColor="@color/colorVennda"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/etColonia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="600dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/etCodigoPostal"
            android:textSize="@dimen/textos"
            android:textColor="@color/colorVennda"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/etCodigoPostal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"/>
        </LinearLayout>
    <!--
      <Spinner
          android:id="@+id/sPais"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:spinnerMode="dropdown"
          android:background="@drawable/drawable_spinner"
          android:drawSelectorOnTop="true" />

      <Spinner
          android:id="@+id/sEntidad"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:spinnerMode="dropdown"
          android:background="@drawable/drawable_spinner"
          android:drawSelectorOnTop="true" />

          <Spinner
              android:id="@+id/sCiudad"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:spinnerMode="dropdown"
              android:background="@drawable/drawable_spinner"
              android:drawSelectorOnTop="true" />


      -->

    <LinearLayout
        android:layout_width="600dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <Button
            android:id="@+id/btnGuardarCliente"
            android:text="@string/btnGuardarCliente"
            android:layout_width="match_parent"
            android:layout_height="@dimen/boton"
            android:textSize="@dimen/textos"
            android:textAllCaps="false"
            style="@style/Widget.AppCompat.Button.Colored"/>

    </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</RelativeLayout>