<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/dialogo_bordes">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight=".9"
        android:padding="@dimen/dialog_body"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtTituloCancelarVenta"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/titulos"
                android:textStyle="bold"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtMotivoCancelar"
                android:textSize="@dimen/textos"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/etMotivoCancelacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:selectAllOnFocus="true"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/numEmpleado"
                android:textSize="@dimen/textos"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/etNumEmpleadoVentaCancelacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contrasena"
                android:textSize="@dimen/textos"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/etPinCancelacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight=".1"
        android:gravity="center|bottom"
        android:background="@color/colorVennda"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btnAceptarCancelacion"
            android:text="@string/btnAceptar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/boton"
            android:textSize="@dimen/textos"
            android:textAllCaps="false"
            android:textColor="@color/colorBlanco"
            style="@style/Widget.AppCompat.Button.Colored"/>
    </LinearLayout>

</LinearLayout>